<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        tools:context=".presentation.recipe_details.RecipeDetailsActivity">

        <TextView
            android:id="@+id/recipeDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/font_large"
            tools:text="Pan Roasted Chicken" />

        <TextView
            android:id="@+id/recipeDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:ellipsize="end"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_normal"
            tools:text="Awesome food!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:ellipsize="end"
                android:text="@string/hint_difficulty"

                android:textColor="@color/dark_gray"
                android:textSize="@dimen/font_normal"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/recipeDetailsDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_height_24"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_normal"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_difficulty"
                android:rating="3"
                android:stepSize="1" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_normal">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/recipeDetailsViewPagerImages"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <TextView
                android:id="@+id/textRecipeImagesPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@drawable/edit_text_rounded_background"
                android:padding="@dimen/padding_small"
                tools:text="2 of 7" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:ellipsize="end"
            android:text="@string/hint_instructions"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeDetailsInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:ellipsize="end"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_normal"
            tools:text="Some instructions for recipe..." />

        <LinearLayout
            android:id="@+id/recipeDetailsSimilarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/header_similar_recipes"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeDetailsRecyclerSimilar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <include
                android:id="@+id/layoutSimilarRecipesLoading"
                layout="@layout/layout_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <include
                android:id="@+id/layoutNoSimilarRecipes"
                layout="@layout/layout_nothing_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
